gke/comm-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comm-service-deployment
  labels:
    app: comm-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: comm-service
  template:
    metadata:
      labels:
        app: comm-service
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: pubsub-key
      containers:
        - name: comm-service-deployment
          image: cs3219g27/comm-service:latest
          ports:
            - name: cms-http
              containerPort: 8004
          resources:
            limits:
              cpu: 80m
              memory: 150Mi
          volumeMounts:
          - name: google-cloud-key
            mountPath: /var/secrets/google
