gke/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-deployment
          image: cs3219g27/frontend:latest
          ports:
            - name: fe-http
              containerPort: 3000
          resources:
            limits:
              cpu: 40m
              memory: 150Mi
