gke/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway-deployment
          image: cs3219g27/gateway:latest
          ports:
            - name: gw-http
              containerPort: 80
          resources:
            limits:
              cpu: 40m
              memory: 100Mi
