gke/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: pubsub-key
      containers:
        - name: user-service-deployment
          image: cs3219g27/user-service:latest
          ports:
            - name: us-http
              containerPort: 8000
          resources:
            limits:
              cpu: 40m
              memory: 300Mi
          volumeMounts:
          - name: google-cloud-key
            mountPath: /var/secrets/google
