gke/collab-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: collab-service
  name: collab-service-service
spec:
  selector:
    app: collab-service
  type: ClusterIP
  ports:
    - name: cs-http
      port: 8003
      protocol: TCP
      targetPort: cs-http
