gke/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cs3219g27
  name: frontend-service
spec:
  selector:
    app: cs3219g27
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
