gke/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway-service
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - name: gw-http
      port: 80
      protocol: TCP
      targetPort: gw-http
