gke/matching-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cs3219g27
  name: matching-service-service
spec:
  selector:
    app: cs3219g27
  type: ClusterIP
  ports:
    - name: ms-http
      port: 8001
      protocol: TCP
      targetPort: ms-http
