gke/question-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: question-service
  name: question-service-service
spec:
  selector:
    app: question-service
  type: ClusterIP
  ports:
    - name: qs-http
      port: 8002
      protocol: TCP
      targetPort: qs-http
