gke/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cs3219g27
  name: user-service-service
spec:
  selector:
    app: cs3219g27
  type: ClusterIP
  ports:
    - name: user-service-http
      port: 8000
      protocol: TCP
      targetPort: user-service-http
