gke/matching-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matching-service-ingress
  labels:
    app: matching-service
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matching-service-service
                port:
                  name: ms-http
